pyconde/skins/pyconde2013/static/css/style.less
/* ... */
ul {
  list-style-type: square;
}

table {
    width: 100%;
}

#page .row {
  border-right: 1px solid #ccc;
  border-left: 1px solid #ccc;
  background: #fff;
  padding-bottom: 50px;
  position: relative;
  padding-top: 20px;
  margin-left: 0;
}
.frontpage #page {
    margin-top: 0;
    background: #FFF;
}

div.page-wrapper {
  // -webkit-box-shadow: 5px -5px 10px -2px #888;
  // box-shadow: 5px -5px 10px -2px #888;
  background: url(../images/frontpage_background.png) no-repeat 0px 0px #fff;
}

header {
  background: url(../images/background.jpg) no-repeat 20px 0px;
  min-height: 330px;
  hgroup {
    margin: 30px auto 0 auto;
    h1, h2 {
      background: @green;
      color: #FFF;
      padding: 7px 7px 7px 20px;
      margin: 0 0 10px -10px;
      float: left;
      clear: left;
      font-size: @headerFontSize;
      a, a:hover {
        color: #FFF;
      }
    }
  }
}

#search {
    position: absolute;
    top: 0px;
    right: 5px;
}

#subheader {
  margin-top: -115px;
  margin-bottom: 5px;
  .logo {
    text-align: right;
  }
  .logo a {
    border: 0;
    display: inline-block;
    margin-right: @rightPageMargin;
  }
  img {
    border: 17px solid rgba(255, 255, 255, 0.5);
  }
  .aligned {
    margin-top: 115px;
  }
}

#page {
  .logo-spacer {
    padding-top: 60px;
  }
  a.logo {
    position: relative;
    top: -130px;
    left: 20px;
  }
}

#mainmenu2, nav2 {
  ul {
    list-style-type: none;
    margin-left: 0px;
    font-size: @smallFontSize;
    li.selected > a {
        font-weight: bold;
    }
    li {
      padding-bottom: 2px;
      a, .link-style {
        color: #fff;
        background: @green;
        color: #fff;
        padding: 3px 10px 3px 15px;
        font-weight: normal;
        display: inline-block;
        line-height: 25px;
        &:hover {
          color: #FFF;
        }
      }
      ul {
        margin-top: 4px;
        margin-bottom: 7px;
        li {
          a {
            font-size: 85%;
            line-height: 120%;
            background: none;
            color: @linkColor;
            font-weight: normal;
            padding: 3px 10px 3px 35px;
            &:hover {
              color: @linkColor;
            }
          }
        }
      }
    }
  }
}

#mainmenu2 ul {
    font-size: @normalFontSize;
}

footer .box {
    margin-left: @fluidGridGutterWidth;
}

#content {
  margin-left: 0px;
  > h1 {
    margin-bottom: 25px;
    border-bottom: 5px solid @green;
    color: @green;
    display: inline-block;
    font-size: @header1FontSize;
    padding: 0px;
    padding-left: @contentPaddingLeft;
    line-height: 1.3em;
  }
  p {
    margin-top: .7em;
  }
}

#content-main {
  background: rgba(255, 255, 255, 1);
  padding-top: 10px;
  padding-right: 15px;
  > * {
    margin-left: @contentPaddingLeft;
  }
  > .btn {
    padding-left: 10px;
  }
  > ul,
  > ol {
    padding-left: 30px;
  }
  h1, h2, h3, h4 {
    color: @green;
    margin-bottom: 20px;
    margin-top: 1em;
    line-height: 1.2em;
  }
  h2, h3 {
    &.alt {
        color: @grey;
    }
  }
  h4, h5, h6 {
    color: @grey;
  }
  h1 {
    margin-top: 0;
    margin-bottom: 10px;
    font-size: 24px;
  }
  h2 {font-size: 20px;}
  h3 {font-size: 15px;}
}
.frontpage #content-main {
    padding-right: 0;
}

footer {
    background: @green;
    color: #fff;
    h2 {
        font-size: @normalFontSize;
        line-height: 100%;
        margin-bottom: 10px;
        text-transform: uppercase;
        min-height: 30px;
    }
    a {
        color: #fff;
        &:hover {
            color: #fff;
        }
    }
    .content {
        #grid > .core .span(8);
        #grid > .core .offset(4);
    }
    .box {
        #grid > .fluid .span(4);
        float: left;
        padding: 20px 0;
        &:first-child {
            margin-left: 0;
        }
    }
}

ul.social-links {
    list-style: none;
    padding: 0;
    margin: 0;
    a {
        color: #FFF;
        padding-left: 26px;
        background-position: 0% 50%;
        background-repeat: no-repeat;
        display: block;
        line-height: 24px;
    }
    li {
        padding: 0;
    }
    .twitter {background-image:url("/static_media/images/twitter-16x16.png");}
    .googleplus {background-image:url("/static_media/images/google+-16x16.png");}
    .youtube {background-image:url("/static_media/images/youtube-16x16.png");}
    .facebook {background-image:url("/static_media/images/facebook-16x16.png");}
}

#content .pagination {
    .next, .prev, .pageinfo, a {
        display: inline-block;
        float: none;
        line-height: 34px;
        padding: 0 14px;
        font-size: @normalFontSize;
        border: none;
    }
    span.next, span.prev {
        color: #BBB;
    }
}

#sidebar {
    font-size: @normalFontSize;
    > aside > .cmsplugin,
    > aside > .tbox,
    > aside > a,
    > aside > img {
        display: block;
        padding: 0 15px 25px 15px;
        font-size: 90%;
        h2 {
            font-size: 16px;
        }
        ul > li {
            margin-bottom: 4px;
        }
    }
    .cmsplugin-news {
        .headline {display: block;}
        h5 {
          margin-bottom: 0px;
        }
        .pub_date {
          color: lighten(@baseColor, 10%);
        }
        a.more:after {
          content: " >>";
        }
        .content {
          margin-bottom: 2.5em;
        }
    }
    .cmsplugin-twitter {
        ul.tweet_list {
            list-style: none;
            margin-left: 0; padding-left: 0;
            li {
                .avatar {
                    float:left;
                }
            }
        }
    }
}

.form-actions {
    background: transparent;
}

#content aside.content_footer {
    margin-top: 50px;
    h2 {
        font-size: 100%;
    }
}
/* ... */

